--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta property="og:title" content="Test Assigment" />
+    <meta property="og:description" content="Some description" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://moroix.netlify.app/" />
+
+    <meta property="og:site_name" content="Название сайта" />
     <title>Test Assigment</title>
   </head>
   <body>
